--- a/kadai_02/desktop.ini
+++ b/kadai_02/desktop.ini
@@ -2,3 +2,5 @@
 スクリーンショット 2023-11-13 221425.png=@スクリーンショット 2023-11-13 221425,0
 スクリーンショット 2023-11-13 221454.png=@スクリーンショット 2023-11-13 221454,0
 スクリーンショット 2023-11-14 205745.png=@スクリーンショット 2023-11-14 205745,0
+スクリーンショット 2023-11-14 222851.png=@スクリーンショット 2023-11-14 222851,0
+スクリーンショット 2023-11-14 222829.png=@スクリーンショット 2023-11-14 222829,0
